--- a/estoque_geral.css
+++ b/estoque_geral.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body{
+    overflow: hidden;
+}
 .menuPrincipal {
     position: absolute;
     top: 0;
@@ -40,7 +43,7 @@
 .btn_menuPrincipal {
     cursor: pointer;
     border: crimson;
-    width: 60px;
+    width: 30px;
 }
 .principal{
     display: flex;
