--- a/estoque_geral.css
+++ b/estoque_geral.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+:root{
+    --azul-principal: #005288
+}
+
 body{
     overflow: hidden;
 }
@@ -58,6 +62,13 @@ body{
     border: none;
 }
 
+.btn_mainoper {
+    background-color: var(--azul-principal);
+    border-radius: 100px;
+    cursor: pointer;
+    width: 30px;
+}
+
 /* FORMATAÇÃO DAS GRIDES */
 .grid{
     display: flex;
@@ -69,7 +80,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #248;
+    background-color: var(--azul-principal);
     color: #fff;
 }
 .colunaTituloGrid{
@@ -94,3 +105,15 @@ body{
     align-items: center;
 }
 /***********************************************/
+
+
+/* TOPO DA JANELA */
+.topoJanela {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 0 10px 0;
+}
+/***********************************************/
+
+
