--- a/estoque_geral.css
+++ b/estoque_geral.css
@@ -3,7 +3,8 @@
     padding: 0;
 }
 :root{
-    --azul-principal: #005288
+    --azul-principal: #005288;
+    --fundo-janela: #ccc;
 }
 
 body{
@@ -116,4 +117,53 @@ body{
 }
 /***********************************************/
 
-
+/* JANELA NOVO */
+.popup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.8);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+}
+.janelaPopup{
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+}
+.tituloPopup{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #cccccc;
+    background-color: var(--azul-principal);
+    padding: 5px;
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+}
+.corpoPopup{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: var(--fundo-janela);
+    width: 100%;
+}
+.rodapePopup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--azul-principal);
+    border-radius: 0 0 5px 5px;
+    padding: 5px;
+    width: 100%;
+}
+.btn_janelaopera{
+    width: 20px;
+    cursor: pointer;
+}
+/***********************************************/
